client managment